apps/architect-business-bot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: architect-business-bot
  namespace: architect-business-bot
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
  labels:
    app.kubernetes.io/name: architect-business-bot
    app.kubernetes.io/part-of: workload-2
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: architect-business-bot
  ports:
    - name: http
      port: 80
      targetPort: http
