apps/architect-business-bot/argocd-webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: architect-business-bot-argocd-webhook
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
    - host: architect-business-bot.api-api-api.com
      http:
        paths:
          - path: /api/webhook
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
