apps/architect-business-bot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: architect-business-bot
  namespace: architect-business-bot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: architect-business-bot.api-api-api.com
    external-dns.alpha.kubernetes.io/target: a6aaa50f-2590-4179-84f2-d0f18bce0587.cfargotunnel.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/ttl: "120"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - architect-business-bot.api-api-api.com
      secretName: architect-business-bot-tls
  rules:
    - host: architect-business-bot.api-api-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: architect-business-bot
                port:
                  name: http
